<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_general">

        <ListPreference
            android:defaultValue="1"
            android:key="lstgridcamerasperrow"
            android:title="@string/title_camera_per_row" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/prefs_sleep_entries"
            android:entryValues="@array/prefs_sleep_entry_values"
            android:key="prefsAwakeTime"
            android:title="@string/title_awake_time" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefsForceLandscape"
            android:title="@string/title_force_landscape" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsShowOfflineCameras"
            android:title="@string/show_offline_camera" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_about">

        <Preference
            android:key="prefsVersion"
            android:title="@string/title_version" />
        <Preference
            android:key="prefsGuide"
            android:title="@string/prefs_show_guide" />

    </PreferenceCategory>

</PreferenceScreen>